# SENG475-Neural-Network-Project

./: CMakeLists.txt  LICENSE  README.txt  Sanitizers.cmake  demo
demo_data/: converter.py  or_test.csv  or_train.csv
include/: auxiliary_functions.hpp  network.hpp  test_network.hpp  train_network.hpp
source/: auxiliary_functions.cpp  network.cpp  test_network.cpp  train_network.cpp
